# ai-reader

./: .gitignore  DEV_LOG.md  README.md  biome.json  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  vite.config.ts
src/: App.tsx  index.css  main.tsx  router.tsx
src-tauri/: .gitignore  Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/ios/: AppleSignIn.swift
src-tauri/src/: commands.rs  error.rs  ios.rs  lib.rs  main.rs
src/components/: NoteInputDialog.tsx  ReaderToolbar.tsx  TabBar.tsx  TranslatePanel.tsx
src/pages/: AIPanel.tsx  BookAnnotations.tsx  BookReader.tsx  Library.tsx  NotebookDetail.tsx  NotebookEdit.tsx  Notebooks.tsx  Settings.tsx
src/services/: importer.ts  platform.ts  webview-log.ts
src/services/ai/: client.ts
src/services/apple/: auth.ts
src/services/reader/: cfi-drift.ts  foliate.ts  mount.ts  pdf.ts  txt.ts  types.ts
src/stores/: ai.ts  annotation.ts  library.ts  notebook.ts  settings.ts
src/types/: foliate-js.d.ts  index.ts
