[package]
name = "ai-reader"
version = "0.1.0"
description = "AI读书 - 跨平台电子阅读器"
authors = ["yuanzhongheng"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "ai_reader_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.1", features = [] }
tauri-plugin-dialog = "2.0"
tauri-plugin-fs = "2.0"
tauri-plugin-os = "2.0"
tauri-plugin-sql = { version = "2.0", features = ["sqlite"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
uuid = { version = "1", features = ["v4"] }
tokio = { version = "1", features = ["sync", "time", "rt", "macros"] }

# Apple Sign In 插件
[target.'cfg(target_os = "ios")'.dependencies]
# 由 Tauri 的 iOS build 自动链入 AuthenticationServices,不需要单独依赖

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
